[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Trigger.gd" type="Script" id=1]
[ext_resource path="res://Meshes/Wireframe/cube_wireframe.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Scripts/WireframeMesh.gd" type="Script" id=3]
[ext_resource path="res://Scripts/CollisionObjectMaterialSwitcher.gd" type="Script" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.3, 0.05, 0.3 )

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.615686, 0.721569, 0.792157, 1 )

[node name="Trigger" type="Area"]
collision_layer = 32
script = ExtResource( 1 )
triggered_color = Color( 0.0509804, 0.419608, 0.0745098, 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.3, 0, 0, 0, 0.05, 0, 0, 0, 0.3, 0, 0.05, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )
script = ExtResource( 4 )

[node name="Wireframe" type="MeshInstance" parent="MeshInstance"]
mesh = ExtResource( 2 )
material/0 = null
script = ExtResource( 3 )

[node name="ResetTimer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Trigger_body_entered"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
